# docs/swagger.yaml
@@ -250,6 +250,15 @@ definitions:
       type:
         $ref: '#/definitions/repositories.TemplateType'
     type: object
+  handlers.ListUsersInRoleResponseDto:
+    properties:
+      displayName:
+        type: string
+      id:
+        type: string
+      username:
+        type: string
+    type: object
   handlers.ListUsersResponseDto:
     properties:
       displayName:
@@ -328,6 +337,15 @@ definitions:
       items:
         items:
           $ref: '#/definitions/handlers.ListTemplatesResponseDto'
+        type: array
+      pagination:
+        $ref: '#/definitions/handlers.Pagination'
+    type: object
+  handlers.PagedUsersInRoleResponseDto:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/handlers.ListUsersInRoleResponseDto'
         type: array
       pagination:
         $ref: '#/definitions/handlers.Pagination'
@@ -435,8 +453,6 @@ definitions:
         - 1000000000
         - 60000000000
         - 3600000000000
-        - -9223372036854775808
-        - 9223372036854775807
         - 1
         - 1000
         - 1000000
@@ -454,8 +470,6 @@ definitions:
         - Second
         - Minute
         - Hour
-        - minDuration
-        - maxDuration
         - Nanosecond
         - Microsecond
         - Millisecond
@@ -1133,6 +1147,57 @@ paths:
       summary: Patch application
       tags:
       - applications
+  /api/virtual-servers/{vsName}/roles/{roleId}/users:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a paginated list of users
+      parameters:
+      - default: keyline
+        description: Virtual server name
+        in: path
+        name: vsName
+        required: true
+        type: string
+      - description: Role ID (UUID)
+        in: path
+        name: roleId
+        required: true
+        type: string
+      - description: Page number
+        in: query
+        name: page
+        type: integer
+      - description: Page size
+        in: query
+        name: pageSize
+        type: integer
+      - description: Order by field
+        in: query
+        name: orderBy
+        type: string
+      - description: Order direction (asc|desc)
+        in: query
+        name: orderDir
+        type: string
+      - description: Search term
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.PagedUsersInRoleResponseDto'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: List users in role
+      tags:
+      - Roles
   /debug:
     get:
       produces:
